objects/GDT_Setup_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDT_Setup_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DelegateUser__c</fullName>
        <label>DelegateUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>toControl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This records can generate an alert.</description>
        <label>ToControl</label>
        <type>Checkbox</type>
    </fields>
    <label>GDT Setup Audit Trail</label>
    <nameField>
        <label>Setup Audit Trail ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDT Setup Audit Trails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>